# LFM-ORBIT

./: .env.example  .gitattributes  .gitignore  README.md  run.bat  run.ps1  run.sh  summary_bank.json
source/backend/: autonomous_agent.py  pyproject.toml  satellite_debug.py  start_edge.py  test_evalscript.py  test_wms.py
source/backend/api/: main.py
source/backend/core/: agent_bus.py  analyzer.py  config.py  contracts.py  depth_anything.py  gallery.py  gee_provider.py  grid.py  ground_agent.py  ground_agent_knowledge.py  ice_snow_monitoring.py  indices.py  inference.py  lifeline_monitoring.py  link_state.py  loader.py  maritime_monitoring.py  metrics.py  mission.py  model_manifest.py  monitor_reports.py  multimodal_inference.py  nasa_provider.py  observability.py  observation_store.py  paths.py  queue.py  replay.py  replay_snapshot.py  runtime_state.py  satellite_agent.py  scanner.py  scene_qc.py  scorer.py  sentinel_provider.py  simsat_client.py  simsat_provider.py  telemetry.py  temporal_use_cases.py  timelapse.py  (+2 more)
source/backend/data/: HF_DATASET_CARD.md  README.md
source/backend/scratch/: _test_nasa.py  _test_nasa2.py  _test_nasa_ca.py  _test_nasa_key.py  _test_wms.py
source/backend/scripts/: decision_gate.py  drift_simulator.py  evaluate_model.py  export_orbit_dataset.py  fetch_satellite_model.py  gee_auth.py  import_boundaries.py  retag_training_assets.py  retag_training_assets_ui.py  seed_nasa_cache.py  seed_sentinel_cache.py  smoke_satellite_model.py  upload_orbit_dataset_hf.py
source/backend/tests/: test_agent_bus.py  test_analyzer.py  test_api.py  (+44 more)
(+195 files in other folders)
