[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lfm-orbit-backend"
version = "0.4.0"
description = "LFM Orbit satellite-first intelligence backend"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.31.0",
    "h3>=4.1.0",
    "pydantic>=2.9.0",
    "websockets>=13.1",
    "httpx>=0.27.0",
    "requests>=2.31.0",
    "numpy>=1.26.0",
    "imageio>=2.37.3",
    "imageio-ffmpeg>=0.6.0",
    "av>=17.0.0",
    "sentinelhub>=3.11.5",
    "s2cloudless>=1.7.3",
    "llama-cpp-python>=0.3.20",
    "geopandas>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
]

[tool.setuptools]
packages = ["api", "core"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
norecursedirs = ["SimSat-main"]
